# APOLLON-feature-ROS2

./: .gitignore  README.md
docker/ISIR/: Dockerfile  README.md  source_ros.sh
docker/ISIR/embeded_packages/lexikhum_oat_gateway/: CMakeLists.txt  package.xml  packages.xml
docker/ISIR/embeded_packages/lexikhum_oat_gateway/include/lexikhum_oat_gateway/: LEXIKHUMOAT_DownstreamGateway.hpp  LEXIKHUMOAT_NonCopyable.hpp  LEXIKHUMOAT_UpstreamGateway.hpp
docker/ISIR/embeded_packages/lexikhum_oat_gateway/launch/: lexikhum_oat_gateway_container_launch.py  lexikhum_oat_gateway_launch.py
docker/ISIR/embeded_packages/lexikhum_oat_gateway/src/: LEXIKHUMOATDownstreamGateway.cpp  LEXIKHUMOATUpstreamGateway.cpp  LEXIKHUMOAT_DownstreamGateway.cpp  LEXIKHUMOAT_UpstreamGateway.cpp
docker/ISIR/embeded_packages/lexikhum_oat_gateway/src/app/downstream/: main.cpp
docker/ISIR/embeded_packages/lexikhum_oat_gateway/src/lib/: LEXIKHUMOAT_DownstreamGateway.cpp  LEXIKHUMOAT_UpstreamGateway.cpp
docker/ISIR/embeded_packages/lexikhum_oat_gateway_msgs/: CMakeLists.txt  package.xml
docker/ISIR/embeded_packages/lexikhum_oat_gateway_msgs/msg/: Downstream.msg  Upstream.msg
project/lexikhum-oat/: README.md
project/lexikhum-oat/container/oci/: Containerfile
project/lexikhum-oat/embeded_packages/lexikhum_oat_gateway/: CMakeLists.txt
project/lexikhum-oat/embeded_packages/lexikhum_oat_gateway/include/lexikhum_oat_gateway/: LEXIKHUMOAT_DownstreamGateway.hpp  LEXIKHUMOAT_UpstreamGateway.hpp
project/lexikhum-oat/embeded_packages/lexikhum_oat_gateway/launch/: lexikhum_oat_gateway_container_launch.py
project/lexikhum-oat/embeded_packages/lexikhum_oat_gateway/src/app/upstream/: main.cpp
project/lexikhum-oat/embeded_packages/lexikhum_oat_gateway/src/lib/: LEXIKHUMOAT_DownstreamGateway.cpp  LEXIKHUMOAT_UpstreamGateway.cpp
project/lexikhum-oat/embeded_packages/lexikhum_oat_gateway_msgs/: CMakeLists.txt
