<?xml version="1.0"?>
<?xml-model 
  href="http://download.ros.org/schema/package_format3.xsd" 
  schematypens="http://www.w3.org/2001/XMLSchema"
?>
<package format="3">

  <name>lexikhum_oat_gateway_msgs</name>
  <version>0.0.1</version>
  <description>Messages used by the APOLLON-ROS Integration layer for the LEXIKHUM-OAT experiment in collaboration with the ISIR Lab (ROS2 version)</description>
  <maintainer email="nawfel.kinani@onera.fr">nkinani</maintainer>
  <author email="nawfel.kinani@onera.fr">nkinani</author>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
